--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="week.css">
-    <title>Week</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Last Year</title>
 </head>
 <body>
 <div class="grid-container">
 </div>
-<script src="week.js" defer></script>
+<script src="script.js" defer></script>
 </body>
 </html>
