Add week days info column

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>Last Year</title>
 </head>
 <body>
-<div class="grid-container">
+<div class="container">
+    <div class="week-days"></div>
+    <div class="grid-container"></div>
 </div>
 <script src="script.js" defer></script>
 </body>
