--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
     <title>Last Year</title>
 </head>
 <body>
-<div class="container">
-    <div class="week-days"></div>
-    <div class="grid-container"></div>
+<div class="container-outside">
+    <div class="month-container"></div>
+    <div class="container-inside">
+        <div class="week-days"></div>
+        <div class="grid-container"></div>
+    </div>
 </div>
-<script src="script.js" defer></script>
 </body>
 </html>
